<resources>
    <string name="app_name">Привычки</string>
    <string name="activity_title_habits">ПРИВЫЧКИ</string>
    <string name="habits_helper">Список привычек, которые вы бы хотели приобрести</string>
    <string name="button_add_new_habit">Добавить привычку</string>
    <string name="button_remove_all_habits">Удалить все</string>
    <string name="empty_habits_list_helper">Пока не создано ни одной привычки, чего же ты ждешь!</string>
    <string name="new_habit_title">Новая привычка</string>
    <string name="edit_habit_title">Редактирование привычки</string>
    <string name="error_empty_title">Заполните название</string>
    <string name="habit_title_hint">Название</string>
    <string name="habit_description_hint">Описание</string>
    <string name="habit_priority_hint">Приоритет - </string>
    <string name="priority_low">Низкий</string>
    <string name="priority_medium">Средний</string>
    <string name="priority_high">Высокий</string>
    <string name="priority_vital">Очень высокий</string>
    <string name="button_save">Сохранить</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_delete">Удалить</string>
    <string name="button_edit">Править</string>
    <string name="button_habits_list">Список привычек</string>
    <string name="button_day_back">&lt; День назад</string>
    <string name="button_day_forward">День вперед &gt;</string>
    <string name="button_fill_daily_report">Заполнить привычки за день</string>
    <string name="daily_report_title">Отчет за день</string>
    <string name="schedule_type_title">Когда выполняем?</string>
    <string name="schedule_type_day">В течение дня</string>
    <string name="schedule_type_morning">Утром</string>
    <string name="schedule_type_evening">Вечером</string>
    <string name="delete_prompt">Вы уверены, что хотите удалить запись?</string>
</resources>
