<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.flovett.habit.main.HomeViewModel" />
        <variable
            name="viewModel"
            type="HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".main.HomeActivity">


        <Button
            android:id="@+id/habitListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onOpenHabitList()}"
            android:text="@string/button_habits_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@{viewModel.formattedDate}"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habitListButton" />

        <Button
            android:id="@+id/dayBackButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/button_day_back"
            android:onClick="@{() -> viewModel.onDayBack()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

        <Button
            android:id="@+id/dayForwardButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onDayForward()}"
            android:text="@string/button_day_forward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dayBackButton" />

        <Button
            android:id="@+id/dailyReportButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_fill_daily_report"
            android:onClick="@{() -> viewModel.onFillDailyReport()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayBackButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>