<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.flovett.habit.edithabit.HabitViewModel" />
        <import type="com.flovett.habit.data.entity.Habit" />
        <variable
            name="model"
            type="HabitViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/habit_title_hint"
                android:inputType="textAutoCorrect|text|textCapSentences|textAutoComplete"
                android:text="@={model.title}"
                app:error="@{model.titleError ? @string/error_empty_title : null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/habit_description_hint"
                android:inputType="textAutoCorrect|text|textCapSentences|textAutoComplete"
                android:text="@={model.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

            <TextView
                android:id="@+id/priorityLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/habit_priority_hint"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/priorityValueTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />

            <TextView
                android:id="@+id/priorityValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@{model.priorityTitle}"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/priorityLabelTextView"
                app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />

            <SeekBar
                android:id="@+id/prioritySeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminate="false"
                android:max="@{model.maxPriority}"
                android:padding="0dp"
                android:progress="@={model.priority}"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priorityLabelTextView" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/scheduleTypeRadioGroup"
                android:layout_marginTop="18dp"
                android:layout_marginStart="4dp"
                android:checkedButton="@={model.scheduleTypeButtonId}"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prioritySeekBar">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/schedule_type_title"/>
                <RadioButton
                    android:id="@+id/radioScheduleTypeMorning"
                    android:text="@string/schedule_type_morning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioScheduleTypeDay"
                    android:text="@string/schedule_type_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioScheduleTypeEvening"
                    android:text="@string/schedule_type_evening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/buttonsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/scheduleTypeRadioGroup"
                android:layout_marginTop="32dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:text="@string/button_save"
                    android:onClick="@{() -> model.onSave()}" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
