<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.flovett.habit.habits.HabitsActivity.EventHandler" />
        <import type="com.flovett.habit.data.entity.Habit" />
        <variable
            name="habit"
            type="Habit" />
        <variable
            name="eventHandler"
            type="EventHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/delete_prompt"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="@{() -> eventHandler.onCancelDelete()}"
                android:text="@string/button_cancel" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{() -> eventHandler.onDeleteHabit(habit)}"
                android:padding="20dp"
                android:text="@string/button_delete"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</layout>